--- a/client/src/Style.scss
+++ b/client/src/Style.scss
@@ -1,5 +1,5 @@
 $lightBlue: #e4f1fe;
-$midBlue: #72d8ff;
+$midBlue: #2895ac;
 $hoverBoxShadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.45);
 
 body {
@@ -14,6 +14,10 @@ body {
       font-size: 1.35rem;
       text-decoration: none;
       color: black;
+
+      &:hover {
+        color: rgb(112, 109, 109);
+      }
     }
 
     .container {
@@ -78,6 +82,11 @@ body {
         }
       }
 
+      .links {
+        display: flex;
+        align-items: center;
+        gap: 1.5vw;
+      }
       //NAVBAR & FOOTER
 
       .navbar {
@@ -90,14 +99,8 @@ body {
             height: 10vh;
           }
 
-          .links {
-            display: flex;
-            align-items: center;
-            gap: 1.5vw;
-
-            span {
-              cursor: pointer;
-            }
+          span {
+            cursor: pointer;
           }
         }
       }
@@ -118,13 +121,13 @@ body {
       //HOME
 
       .home {
-        .posts {
+        .photos {
           margin-top: 50px;
           display: flex;
           flex-direction: column;
           gap: 150px;
 
-          .post {
+          .photo {
             display: flex;
             gap: 100px;
 
