--- a/client/src/Style.scss
+++ b/client/src/Style.scss
@@ -16,7 +16,7 @@ body {
       color: black;
 
       &:hover {
-        color: rgb(112, 109, 109);
+        color: rgb(88, 82, 82);
       }
     }
 
@@ -102,6 +102,20 @@ body {
 
           span {
             cursor: pointer;
+          }
+
+          .publish {
+            background-color: $midBlue;
+            width: 15vh;
+            height: 6vh;
+            border-radius: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            &:hover {
+              box-shadow: $hoverBoxShadow;
+            }
           }
         }
       }
@@ -190,7 +204,7 @@ body {
 
           img {
             width: 100%;
-            height: 60vh;
+            height: 50vh;
             object-fit: cover;
           }
 
@@ -234,7 +248,7 @@ body {
         }
       }
 
-      //WRITE
+      //PUBLISH
 
       .add {
         margin-top: 20px;
@@ -249,8 +263,9 @@ body {
           gap: 20px;
 
           input {
-            padding: 10px;
+            padding: 2vh;
             border: 1px solid lightgray;
+            border-radius: 5px;
           }
 
           .editorContainer {
@@ -270,18 +285,19 @@ body {
           flex: 2;
           display: flex;
           flex-direction: column;
-          gap: 20px;
           background-color: white;
+          padding-left: 3vw;
+          padding-bottom: 2vh;
+          border-radius: 5px;
 
           .item {
-            border: 1px solid lightgray;
             padding: 10px;
             flex: 1;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            font-size: 12px;
-            color: #555;
+            font-size: 1rem;
+            color: black;
 
             h1 {
               font-size: 20px;
@@ -292,45 +308,31 @@ body {
               cursor: pointer;
             }
 
-            .buttons {
-              display: flex;
-              justify-content: space-between;
+            .publish {
+              background-color: $midBlue;
+              height: 5vh;
+              width: 6vw;
+              padding: 10px;
+              border: none;
+              margin-top: 1.5vh;
+              border-radius: 5px;
+              color: white;
+              font-size: 1.1rem;
+              box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.15);
+              cursor: pointer;
 
-              :first-child {
-                cursor: pointer;
-                color: teal;
-                background-color: white;
-                border: 1px solid teal;
-                padding: 3px 5px;
-
-                &:hover {
-                  box-shadow: $hoverBoxShadow;
-                }
-              }
-              :last-child {
-                background-color: $midBlue;
-            height: 5vh;
-            padding: 10px;
-            border: none;
-            margin-top: 1.5vh;
-            border-radius: 5px;
-            color: white;
-            font-size: 1.1rem;
-            box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.15);
-            cursor: pointer;
-
-            &:hover {
-              box-shadow: $hoverBoxShadow;
-            }
+              &:hover {
+                box-shadow: $hoverBoxShadow;
               }
             }
 
             .cat {
               display: flex;
               align-items: center;
-              gap: 2px;
+              font-size: 1rem;
               color: black;
             }
+
           }
         }
       }
