--- a/client/src/Style.scss
+++ b/client/src/Style.scss
@@ -163,7 +163,53 @@ body {
                 font-size: 2rem;
               }
             }
+
+            
           }
+          
+        }
+        .pagination {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-top: 8vh;
+        }
+        
+        .page-btn {
+          font-size: 16px;
+          font-weight: bold;
+          color: #333;
+          background-color: #fff;
+          border: 1px solid #ccc;
+          border-radius: 3px;
+          padding: 10px 15px;
+          margin: 0 5px;
+          cursor: pointer;
+          transition: all 0.3s ease;
+
+          &:hover {
+
+            box-shadow: $hoverBoxShadow;
+          }
+        }
+        
+        .page-btn:hover,
+        .page-btn.active {
+          color: #fff;
+          background-color: $midBlue;
+        }
+        
+        .page-btn:first-of-type {
+          margin-left: 0;
+        }
+        
+        .page-btn:last-of-type {
+          margin-right: 0;
+        }
+        
+        .page-btn:disabled {
+          opacity: 0.5;
+          cursor: not-allowed;
         }
       }
 
