--- a/client/src/pages/single/Single.scss
+++ b/client/src/pages/single/Single.scss
@@ -48,6 +48,20 @@
       }
     }
 
+    .comments {
+        background-color: #e4f1fe;
+        width: 40vw;
+        border-radius: 10px;
+      box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.25);
+
+        .indCmnt {
+            background-color: white;
+            margin: 3vh;
+            height: 10vh;
+            font-size: 1.3rem;
+        }
+    }
+
     .add-cmnt {
       position: absolute;
       margin-left: 14vw;
