--- a/client/src/pages/single/Single.scss
+++ b/client/src/pages/single/Single.scss
@@ -1,11 +1,14 @@
 .single {
   display: flex;
   flex-direction: column;
+  margin-bottom: 5vh;
+  padding-bottom: 5vh;
   gap: 50px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.15);
-
+  align-items: center;
+  justify-content: center;
 
   .content {
     flex: 5;
@@ -14,9 +17,9 @@
     gap: 30px;
     align-items: center;
     justify-content: center;
-    
+
     img {
-        margin-top: 5vh;
+      margin-top: 5vh;
       width: 30%;
       height: 30%;
       object-fit: cover;
@@ -38,66 +41,60 @@
       }
     }
 
-    .edit {
-      display: flex;
-      gap: 1vh;
-
+    .delete {
+        background-color: red;
+        
     }
 
     .comments {
-        background-color: #e4f1fe;
-        width: 40vw;
-        border-radius: 10px;
+      background-color: #e4f1fe;
+      width: 40vw;
+      border-radius: 10px;
       box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.25);
 
-        .indCmnt {
-            background-color: white;
-            margin: 3vh;
-            height: 10vh;
-            font-size: 1.3rem;
-        }
+      .indCmnt {
+        background-color: white;
+        margin: 3vh;
+        height: 10vh;
+        font-size: 1.3rem;
+      }
     }
 
     .add-cmnt {
-      position: absolute;
-      margin-left: 14vw;
       display: flex;
+      margin-top: 2vh;
       flex-direction: column;
-      text-align: center;
-      background-color: #e4f1fe;
-      height: 13.5vh;
+      height: 20vh;
       width: 20vw;
       border-radius: 10px;
-      box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.25);
-
 
       label {
         font-size: 1.5rem;
+        margin-top: 2vh;
       }
 
       textarea {
         height: 5vh;
         resize: none;
         font-size: 1.2rem;
-        margin-left: 1.7vw;
       }
 
-      button {
-        background-color: #2e91ec;
-        height: 3vh;
-        width: 4vw;
-        border: none;
-        margin-top: 1vh;
-        border-radius: 5px;
-        font-size: 1.1rem;
-        color: white;
-        box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.15);
-        cursor: pointer;
-        margin-left: 6.5vw;
+    }
+    button {
+      background-color: #2e91ec;
+      height: 4vh;
+      width: 6vw;
+      border: none;
+      margin-top: 1vh;
+      border-radius: 5px;
+      font-size: 1.1rem;
+      color: white;
+      box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.15);
+      margin-right: 1vw;
+      cursor: pointer;
 
-        &:hover {
-          box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.45);
-        }
+      &:hover {
+        box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.45);
       }
     }
 
